syntax = "proto3";

package teeproto;

option go_package = "tee-mpc/proto;teeproto";

import "signing.proto";
import "common.proto";



// Single artefact produced by client for offline verification
message VerificationBundle {
  CertificateInfo certificate_info = 1; // Structured cert data instead of handshake packets

  // Signed transcripts
  SignedMessage teek_signed = 2; // BODY_TYPE_K_OUTPUT
  SignedMessage teet_signed = 3; // BODY_TYPE_T_OUTPUT

}


