syntax = "proto3";

package teeproto;

option go_package = "tee-mpc/proto;teeproto";

import "common.proto";

// Deterministically serialized payloads to be signed by TEEs
message KOutputPayload {
  // For single request-response mode
  bytes redacted_request = 1; // R_red
  repeated RequestRedactionRange request_redaction_ranges = 2;
  
  // REPLACED: repeated SignedRedactedDecryptionStream redacted_streams = 3; (individual response streams - CONSOLIDATE)
  // REPLACED: repeated bytes packets = 4; (TLS handshake packets - REMOVE)
  bytes consolidated_response_keystream = 3;  // NEW: Single response decryption keystream
  CertificateInfo certificate_info = 4;      // NEW: Structured cert data instead of handshake packets
  
  repeated ResponseRedactionRange response_redaction_ranges = 5;
  uint64 timestamp_ms = 6; // Unix timestamp in milliseconds when payload was created (SIGNED)
}

message TOutputPayload {
  // REPLACED: repeated bytes packets = 1; (TLS packets for BOTH request and response - REMOVE ALL)
  bytes consolidated_response_ciphertext = 1;  // NEW: Single response ciphertext stream
  
  // PRESERVE: Individual R_SP streams for R_S vs R_SP distinction
  repeated bytes request_proof_streams = 2;    // UNCHANGED: Individual R_SP streams for revealing sensitive_proof ranges
  uint64 timestamp_ms = 3;                     // UNCHANGED
}

// Attestation report with structured data
message AttestationReport {
  string type = 1; // "nitro" or "gcp"
  bytes report = 2; // raw provider-specific attestation bytes
}

// Signature wrapper used everywhere
enum BodyType {
  BODY_TYPE_UNSPECIFIED = 0;
  BODY_TYPE_K_OUTPUT = 1;
  BODY_TYPE_T_OUTPUT = 2;
}

// TLS packet metadata for client-side decryption
message TLSPacketInfo {
  uint64 seq_num = 1;
  uint32 position = 2;
  uint32 length = 3;
  bytes nonce = 4;
}

message SignedMessage {
  BodyType body_type = 1;
  bytes body = 2; // serialized deterministic KOutputPayload or TOutputPayload (contains signed timestamp)
  bytes eth_address = 3; // ETH address (20 bytes, standalone mode only)
  bytes signature = 4; // signature over body bytes
  AttestationReport attestation_report = 5; // full attestation (enclave mode only)
  
  // Additional metadata (not signed) for client-side decryption
  repeated TLSPacketInfo response_packets = 6;
  bytes server_app_key = 7;
  uint32 cipher_suite = 8;
}


